# flake_out

./: README.md  setup.cfg
docs/source/: conf.py  flake_out.rst  index.rst  modules.rst
examples/: read_filter_write.py
snowflake_filter_paper/: compare_filter_accuracy.py  early_filter_all.py  edit_man_class_table.py  filter_before_after_figure.py  manually_remove_manmade.py  radius_filter_all.py  snowflake_filter_all.py  statistical_filter_all.py  time_comparison.py
snowflake_filter_paper/figures/: before_after_figure.odg  man_class_figure.odg  visible_region_filter_figure.odg
src/flake_out/: manual_snowflake_classifier.py  single_scan.py
