[metadata]
name = flake-out
version = 0.0.1
author = David Clemens-Sewall
author_email = davidclemenssewall@gmail.com
description = Tool to remove snowflakes from Terrestrial Laser Scanner data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidclemenssewall/flake_out
project_urls =
    Bug Tracker = https://github.com/davidclemenssewall/flake_out/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src